projects/Explore-California/myCode/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # Replace 'nginx' with the correct IngressClass name if different
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: explore-california
            port:
              number: 80
